[package]
name = "lantern_extras"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "=0.11.3"
flate2 = "1.0"
ftp = "3"
tar = "0.4"
itertools = "0.11"
backtrace = "0.3"
url = "2.2"
lantern_cli = { path = "../lantern_cli", default-features = false, features=["external-index", "embeddings", "autotune", "daemon"] }
anyhow = "1.0.75"
rand = "0.8.5"
serde_json = "1.0.111"
tokio-util = "0.7.11"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }

[dev-dependencies]
pgrx-tests = "=0.11.3"

