[package]
name = "lantern_extras"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
default = ["pg17"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "=0.12.7"
flate2 = "1.0"
ftp = "3"
tar = "0.4"
itertools = "0.13"
backtrace = "0.3"
url = "2.5"
lantern_cli = { path = "../lantern_cli", default-features = false, features = [
  "external-index-server",
  "embeddings",
  "daemon",
] }
anyhow = "1.0.91"
rand = "0.8.5"
serde_json = "1.0.132"
tokio-util = "0.7.12"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.3"
fastbloom = "0.7.1"
rust-stemmers = { git = "https://github.com/Ngalstyan4/rust-stemmers.git", branch = "narek/drop-unused-dependency" }

[dev-dependencies]
pgrx-tests = "=0.12.7"

[[bin]]
name = "pgrx_embed_lantern_extras"
path = "./src/bin/pgrx_embed.rs"
