[package]
name = "lantern_index_autotune"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0.75"
postgres = "0.19.7"
lantern_create_index = { path = "../lantern_create_index" }
lantern_logger = { path = "../lantern_logger" }
lantern_utils = { path = "../lantern_utils" }
rand = "0.8.5"
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
