[package]
name = "lantern_pq"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0.75"
postgres = "0.19.7"
lantern_logger = { path = "../lantern_logger" }
lantern_utils = { path = "../lantern_utils" }
rand = "0.8.5"
linfa-clustering = { version = "0.7.0", features = ["ndarray-linalg"] }
linfa = "0.7.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.8.1"
md5 = "0.7.0"
